--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,16 +1,12 @@
 # List the start up tasks. Learn more: https://www.gitpod.io/docs/configure/workspaces/tasks
 tasks:
   - name: aws-cli
-    env:  AWS_CLI_AUTO_PROMPT=on-partial
+    env:  
+      AWS_CLI_AUTO_PROMPT: on-partial
     before: 
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
       sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
-      export AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
-      export AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-      export AWS_DEFAULT_REGION=us-west-2
-      gp env AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE 
-      gp env AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY 
-      gp env AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE  
+    
